--- a/naija-in-five/package.json
+++ b/naija-in-five/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-h5-audio-player": "^3.7.0",
+    "react-hook-form": "^7.6.6",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
